sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:7: error: illegal start of simple expression
	if (plusPetit(i-1,i) ) ) {
                               ^